<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sub_activity"
    android:orientation="vertical"
    tools:context=".ui.AddNewBookActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/background"
        android:src="@drawable/circles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/background"
        android:rotation="180"
        android:scaleType="fitXY"
        android:src="@drawable/circles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        app:cardCornerRadius="50dp"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="2dp"
            android:layout_gravity="center"
            android:contentDescription="@string/sl_icon"
            android:elevation="20dp"
            android:padding="6dp"
            android:src="@drawable/back" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvSmart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="30dp"
        android:letterSpacing="0.0"
        android:text="@string/add_new_book"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addBookNameLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/book_name"
                android:textColorHint="@color/white"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addBookCoverLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_cover"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/white"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBookCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addBookCreditLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_credit"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/white"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBookCredit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addBookCodeLabel"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject_code"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addBookCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addBookTotalUnitLabel"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total_units"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:textColorHint="@color/white"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addBookTotalUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/departmentSelectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_department"
                android:drawableStart="@drawable/sl_double_alt_arrow_down"
                android:drawableEnd="@drawable/sl_double_alt_arrow_down"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button"
                android:textColor="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/selectedDepartmentsText"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_none"
                android:textColor="@color/yellow__Moccasin"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/semesterSelectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_semesters"
                android:drawableStart="@drawable/sl_double_alt_arrow_down"
                android:drawableEnd="@drawable/sl_double_alt_arrow_down"
                android:background="@drawable/bg_button"
                android:textColor="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/selectedSemestersText"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:textColor="@color/yellow__Moccasin"
                android:layout_height="wrap_content"
                android:text="@string/selected_none"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addBookDescriptionLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint="@string/book_description"
                android:textColorHint="@color/white"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBookDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:overScrollMode="always"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/postButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_book"
                android:background="@drawable/bg_post"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>