<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sub_activity"
    android:orientation="vertical"
    tools:context=".ui.AddNewSemesterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/background"
        android:src="@drawable/circles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:contentDescription="@string/background"
        android:rotation="180"
        android:scaleType="fitXY"
        android:src="@drawable/circles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="50dp"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="2dp"
            android:layout_gravity="center"
            android:contentDescription="@string/sl_icon"
            android:elevation="20dp"
            android:padding="6dp"
            android:src="@drawable/back" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvSmart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="30dp"
        android:letterSpacing="0.0"
        android:text="@string/add_new_semester"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <!-- Department Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                android:hint="@string/select_semesters"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/editProDepartment"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_button"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    android:textColor="@color/white"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Semester Name Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/select_semesters"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/editProSemester"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_button"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    android:textColor="@color/white"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- PDF Input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/pdf"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_book"
                android:background="@drawable/bg_post"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
